<resources>
    <string name="app_name">Einkaufsliste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Benutzername</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lists">Einkaufslisten</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="name">Name</string>
    <string name="buyinglist_creation">Einkaufsliste erstellen</string>
    <string name="cancel">Beenden</string>
    <string name="add">Hinzufügen</string>
    <string name="buyinglist_date">Einkaufsdatum einstellen:</string>
    <string name="menge">Menge</string>
    <string name="listData_item">Produkt eingeben</string>
    <string name="listData_menge">Menge eingeben</string>
    <string name="listData_name">ListDataName</string>
    <string name="listData_amount">ListDataMenge</string>
    <string name="listData_unit">Einheit eingeben</string>
    <string name="listData_Typ">ListDataUnit</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Konto erstellen</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ipAddress">IP-Adresse</string>
    <string name="save">speichern</string>
    <string name="addUser">Benutzer hinzufügen</string>
    <string name="userNotExist">Benutzer existiert nicht!</string>
    <string name="addedUser">Benutzer hinzugefügt</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logout">Logout</string>
</resources>