<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/listData_item"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/listData_name"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="match_parent"
        android:text="@string/name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/listData_menge"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/listData_amount"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="match_parent"
        android:text="@string/menge"
        />
</LinearLayout>