<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_lists"
        android:name="com.example.einkaufsliste.ui.lists.ListsFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_lists" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.einkaufsliste.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.einkaufsliste.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_singleList"
        android:name="com.example.einkaufsliste.ui.lists.ListDataFragment"
        tools:layout="@layout/fragment_listdata" />
</navigation>